*** 20000410_1 by lusky
chan mode +p/+s fix (ejb)
use MAX_SETBACK_TIME for threshold of clock jump--now 1800secs (db)
unneeded va_end() broke compile on some OSes (db)


*** 20000402_1 by lusky
fixed bug that caused only the first connection in a class to be tried
  i.e. if you had several C: lines in one =class= only the first
  C: line was ever used. This is code that was #ifdef'd out from original
  hybrid-5 (db)
revved patchlevel to b122


*** 20000206_1 by lusky
fixed spaces in src/Makefile.in (db)


*** 20000201_1 by lusky
fixed UMR in poll code (th)
revved patchlevel to b121


*** 20000131_2 by lusky
revved patchlevel to b120
dropped TS_MAX_DELTA default to 300 seconds
various compile warning fixes
turn off GLINES by default


*** 20000131_1 by lusky
reverted to -5 nick collide code (db)
fixes to make debugmode compile (db)


*** 20000103_1 by lusky
revved patchlevel to b119


*** 20000102_1 by lusky
The "hack" ops message is just plain wrong. Its not needed anyway. (db).
userhost formatting problem (ce)
malformed U line caused strange cores on /rehash (db)


*** 19991228_1 by lusky
split m_list.c away from channel.c its getting too silly  ALL paced
  commands should give RPL_LOAD2HI if its a local client request.
  Its not going to flood off the user... Hence, I have added RPL_LOAD2HI
  to m_list.c splitting it from channel.c (db)
optimized the patch I did for USE_IP_I_LINE first.. not thoroughly tested. (db)
resync_channels was just a waste of time. If the clock goes that far off,
 restart the puppy. (db)


*** 19991227_1 by lusky
update the oper help file, which was getting out of sync (db)
fixed a redundant if in channel.c (db)
core dumps, hangs if USE_IP_I_LINE_FIRST was defined (db)


*** 19991223_1 by lusky
backed out previous change to config.h
upped MAXSENDQLENGTH slightly
redid dbuf handling to dynamically allocate more dbufs (db)
numeric 480 is unnecessary 479 does the same job on ircu ircnet (db)


*** 19991222_1 by lusky